--- a/src/Styles/_Footer.scss
+++ b/src/Styles/_Footer.scss
@@ -4,26 +4,24 @@
     padding: 20px 0;
     text-align: center;
     font-size: 18px;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    position: relative;
 
     p {
-    margin: 0;
-    color: #ffffff;
+        margin: 0;
+        color: #ffffff;
     }
 
     a {
-    color: #ffffff;
-    text-decoration: none;
+        color: #ffffff;
+        text-decoration: none;
     }
 
     img {
-    width: 100%;
+        width: 100%;
     }
 }
 
-    .footer-column {
-        float: left;
-        width: 50%;
-    }
+.footer-column {
+    float: left;
+    width: 50%;
+}
