--- a/src/Styles/_Page.scss
+++ b/src/Styles/_Page.scss
@@ -1,37 +1,57 @@
-@media (min-width: 50em) {
+// Variables
+$font-primary: "Montserrat";
+$font-secondary: "Lora";
+$font-size-base: 14px;
+$line-height-base: 17px;
+$color-white: #ffffff;
+$color-black: #000000;
+$color-gray: gray;
+$color-gray-light: #828282;
+$color-background: #181719;
+$color-box-shadow: rgba(0, 0, 0, 0.25);
+$gap: 4rem;
+$max-width-description: 500px;
+
+$bottom-profile: -90px;
+$right-profile: 20px;
+$padding-bottom-profile: 25px;
+$margin-left-content-section: 20px;
+$max-width-content-section: 210px;
+
+// Responsive layout
+@media (min-width: 600px) {
     .Responsive {
         display: flex;
-        flex-direction: row;
-        align-items: center;
-        gap: 4rem;
-        justify-content: space-evenly;
+
         .contents {
             align-items: flex-start;
-            .description {
-                max-width: 500px;
-            }
+            justify-content: space-between;
+            flex-direction: row;
+            gap: $gap;
+            padding: 0 2rem;
+            margin: 0 auto;
+            max-width: 1200px;
+            width: 100%;
+            height: 100%;
         }
     }
 }
 
-.contents {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    margin-bottom: 2rem;
-    justify-items: flex-end;
-    .a {
-        font-family: "Montserrat";
-        font-style: normal;
-        font-weight: 700;
-        font-size: 14px;
-        line-height: 17px;
-        /* identical to box height */
-        color: #ffffff;
-        text-decoration: none;
+@media (max-width: 600px) {
+    .Cuadrado {
+        position: absolute;
+        top: 100%;
     }
 }
 
+@media (min-width: 600px) {
+    .Cuadrado {
+        position: absolute;
+        top: 70%;
+    }
+}
+
+// Estilos
 .Titulo {
     font-family: "Lora";
     font-style: normal;
@@ -41,7 +61,31 @@
     /* identical to box height */
     color: #ffffff;
 }
+.description {
+    font-family: $font-primary;
+    font-weight: 400;
+    font-size: $font-size-base;
+    line-height: $line-height-base;
+    color: $color-white;
+    max-width: 250px;
+}
 
+.boton-read-more {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+    background: $color-white;
+    border-radius: 4px;
+    padding: 0.5rem 1rem;
+    font-family: $font-primary;
+    font-weight: 700;
+    font-size: $font-size-base;
+    line-height: $line-height-base;
+    color: $color-black;
+    text-decoration: none;
+    transition: 0;
+}
 .description {
     font-family: "Montserrat";
     font-style: normal;
@@ -51,7 +95,6 @@
     color: #ffffff;
     max-width: 250px;
 }
-
 .boton-readMore {
     display: flex;
     gap: 1rem;
@@ -74,5 +117,69 @@
         color: white;
         margin-left: 5px;
         transition: 0.5s;
+    }
+}
+
+.Contenedor {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    //background-color: #181719;
+    padding: 10px;
+
+    width: auto; /* o cualquier otro tamaño deseado */
+    height: auto;
+
+    .FirtsImagen {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    .Cuadrado {
+        
+        background-color: #181719; /* color de fondo del cuadrado */
+        border-radius: 10px; /* esto hace que el borde sea redondo */
+        box-shadow: 0px 4px 4px rgba(78, 77, 77, 0.25); /* esto hace que el cuadrado tenga sombra */
+       display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        .Foto-texto {
+            display: flex;
+            flex-direction: row;
+
+            .SecondImagen {
+                width: 15%;
+                height: 15%;
+
+                object-fit: cover;
+                border-radius: 50%;
+                margin: 7px;
+
+            }
+
+            .profile {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                margin-left: 20px;
+                margin-right: 20px;
+                color: #ffffff;
+
+                .name-designer {
+                    font-family: "Montserrat";
+                    font-style: normal;
+                    font-weight: 700;
+                    font-size: 18px;
+                    line-height: 22px;
+                    color: #ffffff;
+                }
+            }
+        }
+        .content-section {
+            color: #ffffff;
+        }
     }
 }
