--- a/src/Styles/_Footer.scss
+++ b/src/Styles/_Footer.scss
@@ -1,10 +1,23 @@
 .footer {
     background-color: #b1b1c3;
     border-top: 1px solid #ffffff;
-    padding: 20px 0;
-    text-align: center;
-    font-size: 18px;
+    padding: 1rem 0;
     position: relative;
+    z-index: 1;
+    width: 100%;
+    text-align: center;
+    color: #ffffff;
+
+    position:absolute;
+
+    bottom:-40px;
+
+
+        @media (max-width: 600px) {
+            position: relative;
+        }
+        
+    
 
     p {
         margin: 0;
@@ -19,6 +32,7 @@
     img {
         width: 100%;
     }
+
 }
 
 .footer-column {
